# DC_VIC

./: .gitignore  README.md  pyproject.toml  setup.py
config/: dc_vic_oasis.yaml  dc_vic_patchgan.yaml  exp1_stage1_1.yaml  exp1_stage1_2.yaml  exp1_stage1_3.yaml  exp1_stage3.yaml
config/_base_/: default.yaml
config/_base_/dataset/: train_openimage_eval_kodak.yaml
config/_base_/model/: hyperprior_charm_dual_cond_vic_model_vq_f8_n256.yaml
docs/: training.md
rd_results/: README.md  clic.csv  div2k.csv  kodak.csv
scripts/: beta_selection.py  binary_rate_search.py  build_openimage_val_dataset.py  calc_metrics.py  compress.py  train.py
src/: __init__.py
src/dataset/: __init__.py  openimage_dataset.py
src/losses/: __init__.py  cross_entropy_loss.py  distortion_loss.py  gan_loss.py  oasis_gan_loss.py  rate_loss.py
src/models/: __init__.py  vq_vae_builder.py
src/models/comp_model/: __init__.py  base_model.py  hyperprior_charm_dc_vic_model.py  hyperprior_charm_vic_model.py  hyperprior_dc_vic_model.py  hyperprior_model.py  hyperprior_vic_model.py
src/models/discriminator/: __init__.py  dual_beta_taming_nlayer_discriminator.py  oasis_discriminator.py  taming_nlayer_discriminator.py
src/models/layer/: codeformer_layers.py  elic_layers.py  fourier_enc.py  (+3 more)
src/trainer/: __init__.py  base_trainer.py  dual_cond_gan_distortion_vq_code_trainer.py  dual_cond_oasis_gan_distortion_vq_code_trainer.py  dual_cond_rate_distortion_vq_code_trainer.py  rate_distortion_vq_code_trainer.py
src/utils/: codec_utils.py  img_utils.py  logger.py  misc.py  options.py  registry.py
(+20 files in other folders)
