[tool.poetry]
name = "dc-vic"
version = "0.1.0"
description = ""
authors = ["shomaiwai <sho.iwai101@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = {version = "1.12.1+cu113", source = "torch_cu113"}
torchvision = {version = "0.13.1+cu113", source = "torch_cu113"}
torchaudio = {version = "0.12.1", source = "torch_cu113"}
compressai = "1.2.4"
opencv-python = "4.5.5.62"
tqdm = "^4.66.4"
addict = "^2.4.0"
lpips = "0.1.4"
pytorch-fid = "0.3.0"
pytorch-msssim = "0.2.1"
scikit-image = "0.20.0"
dists-pytorch = "0.1"
pytorch-lightning = "1.4.2"
pandas = "1.4.1"
python-log-indenter = "^0.9"
timm = "0.9.2"
einops = "0.3.0"
torchmetrics = "0.6.0"
taming-transformers = {git = "https://github.com/CompVis/taming-transformers"}


[[tool.poetry.source]]
name = "torch_cu113"
url = "https://download.pytorch.org/whl/cu113"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
